# local-transcriber

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  local_audio_transcriber.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DropZone.tsx  JobStatus.tsx  SettingsPanel.tsx  TranscriptView.tsx
frontend/src/components/ui/: badge.tsx
src/transcriber/: __init__.py  api.py  asr.py  bootstrap.py  cli.py  guardrails.py  inference.py  models.py  ollama.py  output.py  pipeline.py  utils.py
tests/: test_api.py  test_asr_pure.py  test_guardrails.py  test_inference.py  test_models.py  test_ollama_pure.py  test_output.py  test_utils.py
