[project]
name = "local-transcriber"
version = "0.1.0"
description = "GPU-accelerated local audio transcription with Whisper and LLM correction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "faster-whisper>=1.2",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9,<10",
]

[project.scripts]
transcribe        = "transcriber.cli:main"
transcribe-server = "transcriber.api:serve"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]
"src/transcriber/api.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "ctranslate2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/transcriber"]
omit = ["src/transcriber/bootstrap.py"]
